# infinity-engine-parser

./: .gitignore  Cargo.toml  README.md  testpaths.json.dist
.github/workflows/: rust.yml
BG5E/infinity-engine-parser/: Cargo.toml
BG5E/infinity-engine-parser/src/: bits.rs  bytes.rs  key.rs  lib.rs  resource.rs  util.rs
BG5E/infinity-engine-parser/src/game/: global.rs  mod.rs  win32.rs
BG5E/infinity-engine-parser/src/platform/: global.rs  mod.rs  win32.rs
BG5E/infinity-engine-parser/src/types/: bif.rs  bmp.rs  key.rs  mod.rs  util.rs
src/: bits.rs  bytes.rs  lib.rs  resource.rs  test.rs
src/platform/: global.rs  linux.rs  mod.rs  win32.rs  windows.rs
src/types/: are.rs  bmp.rs  key.rs  mod.rs  tis.rs  tlk.rs  util.rs  wed.rs
src/types/are/: actor.rs  ambient.rs  animation.rs  are.rs  automap.rs  container.rs  door.rs  entrance.rs  header.rs  item.rs  mod.rs  region.rs  rest.rs  song.rs  spawn.rs  tiled.rs  trap.rs  util.rs  variable.rs
src/types/bif/: bif.rs  bifc.rs  bifcc.rs  mod.rs
src/types/util/: bitmask.rs  boundingbox.rs  color.rs  dimensions.rs  functions.rs  identity.rs  mod.rs  point.rs  section.rs  traits.rs
src/types/wed/: door.rs  header.rs  mod.rs  overlay.rs  polygon.rs  tilemap.rs  wall.rs  wed.rs
