[package]
authors = ["Peter Lunneberg"]
name = "infinity-engine-parser"
version = "0.2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
byteorder = "1"
flate2 = "1"
glob = "0"
image = "0"
safer-ffi = "0"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_with = "3"
strum = { version = "0", features = [ "derive" ] }

[target.'cfg(windows)'.dependencies]
registry = "1"

[lints.rust]
non_snake_case = "allow"
non_upper_case_globals = "allow"
