[package]
name = "infinity-engine-parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "InfinityEngineParser"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
safer-ffi = "0.1.3"

[target.'cfg(windows)'.dependencies]
registry = "1.2.3"
