[package]
name = "infinity-engine-parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "infinity_engine_parser"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1"
flate2 = "1.0"
image = "0.24.7"
safer-ffi = "0.1"
serde = "1.0.188"
serde_json = "1.0"
serde_with = "3.3.0"
strum = { version = "0.25.0", features = [ "derive" ] }

[target.'cfg(windows)'.dependencies]
registry = "1.2"
